# harness-starter

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  h-setup.sh  manifest.yml  pyproject.toml  session_lifecycle.py  setup.sh  test_cps_memory_lifecycle.py  test_cps_preflight_verification_gate.py  test_session_close_lifecycle.py  test_session_lifecycle.py
.claude/: HARNESS.json  HARNESS_MAP.md  settings.json
.claude/agents/: advisor.md  codebase-analyst.md  debug-specialist.md  doc-finder.md  docs-lookup.md  docs-manager.md  performance-analyst.md  researcher.md  review.md  risk-analyst.md  test-strategist.md  threat-analyst.md
.claude/memory/: MEMORY.md  (+10 more)
.codex/: hooks.json
.harness/: manifest.yaml
.measurements/: README.md  harness_v0.33.0_baseline_stagelink_20260502.md  harness_v0.33.0_baseline_starter_meta_only_20260502.md
adapters/: README.md  harness_runtime_adapter.py
contracts/: __init__.py  canonical-binding.v1.schema.json  execution-receipt.v1.schema.json
docs/: INDEX.md  build-and-state-contract.md  harness-operational-driver.md
scripts/: harness_operational_driver.py  install-secret-scan-hook.sh  verify_handoff_snapshot.sh
supabase/: config.toml
templates/: execution-request.v1.json
tests/: test_active_case_state_machine.py  test_cps_advisory_reader_contract.py  test_cps_c1_retrieval_adapter.py  test_cps_current_system_integration.py  test_cps_expression_lint.py  test_cps_learning_candidate.py  test_cps_runtime_navigation.py  test_cps_working_graph_registry.py  test_external_runtime_dispatcher.py  test_lifecycle_runner.py  test_maat_reducer_registry_integration.py  test_semantic_checkpoint_git_dispatcher.py
(+677 files in other folders)
