[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-runtime"
version = "0.1.1"
description = "Isolated Harness runtime receipt contract"
readme = "docs/build-and-state-contract.md"
requires-python = "==3.11.*"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]
driver = ["setuptools==80.9.0"]

[project.scripts]
harness-runtime = "harness_runtime.cli:main"
harness-project-binding = "harness_runtime.binding_cli:main"
harness-guided-capability = "harness_runtime.capability_cli:main"

[tool.setuptools]
packages = ["harness_runtime", "contracts"]
package-dir = {harness_runtime = "runtime/harness_runtime", contracts = "contracts"}
include-package-data = true

[tool.setuptools.package-data]
contracts = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests/runtime"]
addopts = "-q"
